一个CardInfo poco 对象, 通过json对象读取需要的游戏内置信息

--- a/CardGame.csproj
+++ b/CardGame.csproj
@@ -6,4 +6,7 @@
   <ItemGroup>
     <Folder Include="scene\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="script\datebase\CardInfo.json" />
+  </ItemGroup>
 </Project>
